[package]
name = "mdbook-spec"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
mdbook = { version = "0.4.36", default-features = false }
pathdiff = "0.2.1"
regex = "1.10.3"
semver = "1.0.21"
serde_json = "1.0.113"
tempfile = "3.10.1"
