[package]
name = "mdbook-spec"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An mdBook preprocessor to help with the Rust specification."
repository = "https://github.com/rust-lang/spec/"
default-run = "mdbook-spec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
mdbook = { version = "0.4.36", default-features = false }
once_cell = "1.19.0"
pathdiff = "0.2.1"
# Try to keep in sync with mdbook.
pulldown-cmark = { version = "0.10.3", default-features = false }
railroad = { version = "0.3.2", default-features = false }
regex = "1.9.4"
semver = "1.0.21"
serde_json = "1.0.113"
tempfile = "3.10.1"
walkdir = "2.5.0"
