[package]
name = "mdbook-spec"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An mdBook preprocessor to help with the Rust specification."
repository = "https://github.com/rust-lang/spec/"
default-run = "mdbook-spec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
diagnostics = { path = "../diagnostics" }
grammar = { path = "../grammar" }
mdbook-markdown = "0.5.1"
mdbook-preprocessor = "0.5.1"
once_cell = "1.19.0"
pathdiff = "0.2.1"
railroad = { version = "0.3.2", default-features = false }
regex = "1.12.2"
semver = "1.0.21"
serde_json = "1.0.113"
tempfile = "3.10.1"
walkdir = "2.5.0"
